@@ -1,10 +1,16 @@
 buildscript{
     ext{
-        getArcHash = {
-            return new Properties().with{ p -> p.load(file('gradle.properties').newReader()); return p }["archash"]
+        arcHash = new Properties().with{ p -> p.load(file('gradle.properties').newReader()); return p }["archash"]
+
+        localArc = { // TODO Shouldn't this just be a boolean?
+            return !project.hasProperty("release") && new File(rootDir.parent, 'Arc').exists()
         }
 
-        arcHash = getArcHash()
+        arcModule = { String name ->
+            //skip to last submodule
+            name = name.substring(name.lastIndexOf(':') + 1)
+            return "com.github.mindustry-antigrief${localArc() ? "" : ".Arc"}:$name:$arcHash"
+        }
     }
 
     repositories{
@@ -17,36 +23,31 @@ buildscript{
 
     dependencies{
         classpath "com.mobidevelop.robovm:robovm-gradle-plugin:2.3.16"
-        classpath "com.github.zxtej.Arc:packer:freeze-v135-SNAPSHOT" // Could break when updating to build 136 (erekir).
-        classpath "com.github.zxtej.Arc:arc-core:freeze-v135-SNAPSHOT"
+        classpath arcModule(":extensions:packer")
+        classpath arcModule(":arc-core")
     }
 }
 
 plugins{
     id "org.jetbrains.kotlin.jvm" version "1.7.10"
-    id "org.jetbrains.kotlin.kapt" version "1.7.10"
+    id "org.jetbrains.kotlin.kapt" version "1.7.10" apply false
+//    id "com.github.evestera.depsize" version "0.2.0"
 }
 
 allprojects{
-    version = 'release'
-    group = 'com.github.Anuken'
+    version = project.hasProperty("packageVersion") ? project.getProperty("packageVersion") : 'release'
+    group = 'com.github.mindustry-antigrief'
 
     ext{
         versionNumber = '7'
         if(!project.hasProperty("updateUrl")) updateUrl = ''
-        if(!project.hasProperty("versionModifier")) versionModifier = 'pre-alpha'
-        if(!project.hasProperty("buildversion")) buildversion = '135'
-        if(!project.hasProperty("clientVersion")){
-            def tagTokens = "git tag --sort=committerdate -l v${project.getProperties()["buildversion"]}* -n1".execute().text.trim().split('[\n]')[-1]
-                    .tokenize(' ')[0].split('[.]') as String[]
-            tagTokens[0] = tagTokens[0][1..-1]
-            tagTokens[-1] = ((tagTokens[-1] as Integer) + 1) as String
-            clientVersion = 'git branch --show-current'.execute().text.trim() + " / ${tagTokens.join('.')}"
-        }
+        if(!project.hasProperty("versionModifier")) versionModifier = 'alpha'
+        if(!project.hasProperty("buildversion")) buildversion = '136' // Modders use BE build numbers which is stupid
+        if(!project.hasProperty("clientVersion")) clientVersion = 'v1.0.0, Jan. 1, 1970'
         if(!project.hasProperty("versionType")) versionType = 'official'
         appName = 'Mindustry'
         steamworksVersion = '0b86023401880bb5e586bc404bedbaae9b1f1c94'
-        rhinoVersion = '3c6bbadf73a904eefcc28b6fd8aa742ac575e878'
+        rhinoVersion = '73a812444ac388ac2d94013b5cadc8f70b7ea027'
 
         loadVersionProps = {
             return new Properties().with{p -> p.load(file('../core/assets/version.properties').newReader()); return p }
@@ -54,20 +55,6 @@ allprojects{
 
         debugged = {
             return new File(projectDir.parent, '../Mindustry-Debug').exists() && !project.hasProperty("release") && project.hasProperty("args")
-        }
-
-        localArc = {
-            return !project.hasProperty("release") && !project.hasProperty("noLocalArc") && new File(projectDir.parent, '../Arc').exists()
-        }
-
-        arcModule = { String name ->
-            if(localArc()){
-                return project(":Arc:$name")
-            }else{
-                //skip to last submodule
-                if(name.contains(':')) name = name.split(':').last()
-                return "com.github.zxtej.Arc:$name:freeze-v135-SNAPSHOT"
-            }
         }
 
         generateDeployName = { String platform ->
@@ -146,7 +133,6 @@ allprojects{
 
                 String buildid = getBuildVersion()
                 println("Compiling with build: '$buildid'")
-                if (localArc()) println("Compiling with localArc")
 
                 props["updateUrl"] = updateUrl
                 props["clientVersion"] = clientVersion
@@ -204,7 +190,7 @@ allprojects{
         targetCompatibility = JavaVersion.VERSION_1_8
         sourceCompatibility = JavaVersion.VERSION_16
         options.encoding = "UTF-8"
-        options.compilerArgs += ["-Xlint:deprecation", "-Xmaxerrs", "5000"]
+        options.compilerArgs += ["-Xmaxerrs", "5000"]
         dependsOn clearCache
 
         options.forkOptions.jvmArgs += [
@@ -215,16 +201,8 @@ allprojects{
             '--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
             '--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
             '--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
-            '--add-opens=java.base/sun.reflect.annotation=ALL-UNNAMED'
+            '--add-exports=java.base/sun.reflect.annotation=ALL-UNNAMED'
         ]
-    }
-}
-
-configure(project(":annotations")){
-    tasks.withType(JavaCompile){
-        targetCompatibility = 8
-        sourceCompatibility = 8
-//        options.fork = true
     }
 }
 
@@ -261,44 +239,7 @@ project(":desktop"){
     }
 }
 
-project(":ios"){
-    apply plugin: "java"
-    apply plugin: "robovm"
-
-    task incrementConfig{
-        def vfile = file('robovm.properties')
-        def bversion = getBuildVersion()
-        def props = new Properties()
-        if(vfile.exists()){
-            props.load(new FileInputStream(vfile))
-        }else{
-            props['app.id'] = 'io.anuke.mindustry'
-            props['app.version'] = '7.0'
-            props['app.mainclass'] = 'mindustry.IOSLauncher'
-            props['app.executable'] = 'IOSLauncher'
-            props['app.name'] = 'Mindustry'
-        }
-
-        props['app.build'] = (!props.containsKey("app.build") ? 40 : props['app.build'].toInteger() + 1) + ""
-        if(bversion != "custom build"){
-            props['app.version'] = versionNumber + "." + bversion + (bversion.contains(".") ? "" : ".0")
-        }
-        props.store(vfile.newWriter(), null)
-    }
-
-    dependencies{
-        implementation project(":core")
-
-        implementation arcModule("natives:natives-ios")
-        implementation arcModule("natives:natives-freetype-ios")
-        implementation arcModule("backends:backend-robovm")
-
-        compileOnly project(":annotations")
-    }
-}
-
 project(":core"){
-//    apply plugin: "java-library"
     apply plugin: "kotlin"
     apply plugin: "kotlin-kapt"
 
@@ -360,6 +301,28 @@ project(":core"){
         archives assetsJar
     }
 
+    kapt {
+        showProcessorStats = true
+        keepJavacAnnotationProcessors = true
+        javacOptions{
+            option("-source", "16")
+            option("-target", "8")
+        }
+    }
+
+    tasks.withType(org.jetbrains.kotlin.gradle.internal.KaptWithoutKotlincTask.class).configureEach {
+        kaptProcessJvmArgs.addAll([
+                '--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
+                '--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
+                '--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
+                '--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
+                '--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
+                '--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
+                '--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
+                '--add-exports=java.base/sun.reflect.annotation=ALL-UNNAMED'
+        ])
+    }
+
     dependencies{
         compileJava.dependsOn(preGen)
 
@@ -374,7 +337,6 @@ project(":core"){
         api "com.github.Anuken:rhino:$rhinoVersion"
         if(localArc() && debugged()) api arcModule("extensions:recorder")
         if(localArc()) api arcModule(":extensions:packer")
-        if(localArc()) implementation arcModule("extensions:profiling")
 
         implementation "org.jetbrains.kotlin:kotlin-reflect:1.7.10"
 //        implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0" Unused, removed to reduce jar size
@@ -386,31 +348,32 @@ project(":core"){
         compileOnly arcModule("backends:backend-sdl")
         implementation 'commons-net:commons-net:3.8.0'
 
-        annotationProcessor 'com.github.Anuken:jabel:0.9.0'
         compileOnly project(":annotations")
         if (!project.hasProperty("noKapt")) kapt project(":annotations")
-//        runtimeOnly "org.jetbrains.kotlin:kotlin-scripting-jsr223:1.6.21"
+        annotationProcessor 'com.github.Anuken:jabel:0.9.0'
     }
 
     afterEvaluate{
         task mergedJavadoc(type: Javadoc){
-            def blacklist = [project(":ios"), project(":desktop"), project(":server"), project(":annotations")]
-            if(findProject(":android") != null){
-                blacklist += project(":android")
-            }
-
-            source rootProject.subprojects.collect{ project ->
-                if(!blacklist.contains(project) && project.hasProperty("sourceSets")){
-                    return project.sourceSets.main.allJava
+            doLast {
+                def blacklist = [project(":ios"), project(":desktop"), project(":server"), project(":annotations")]
+                if(findProject(":android") != null){
+                    blacklist += project(":android")
                 }
-            }
 
-            classpath = files(rootProject.subprojects.collect { project ->
-                if(!blacklist.contains(project) && project.hasProperty("sourceSets")){
-                    return project.sourceSets.main.compileClasspath
+                source rootProject.subprojects.collect{ project ->
+                    if(!blacklist.contains(project) && project.hasProperty("sourceSets")){
+                        return project.sourceSets.main.allJava
+                    }
                 }
-            })
-            destinationDir = new File(buildDir, 'javadoc')
+
+                classpath = files(rootProject.subprojects.collect { project ->
+                    if(!blacklist.contains(project) && project.hasProperty("sourceSets")){
+                        return project.sourceSets.main.compileClasspath
+                    }
+                })
+                destinationDir = new File(buildDir, 'javadoc')
+            }
         }
     }
 
@@ -468,18 +431,22 @@ project(":tools"){
     }
 }
 
-project(":annotations"){
-    apply plugin: "java-library"
+configure(project(":annotations")){
+    apply plugin: "kotlin"
+
+    tasks.withType(JavaCompile){
+        targetCompatibility = 8
+        sourceCompatibility = 8
+    }
 
     dependencies{
         implementation "com.squareup:javapoet:1.12.1"
-        implementation "com.github.zxtej.Arc:arc-core:freeze-v135-SNAPSHOT"
+        implementation arcModule("arc-core")
     }
 }
 
-configure([":core", ":desktop", ":server", ":tools"].collect{project(it)}){
+configure([":core", ":server"].collect{project(it)}){
     apply plugin: 'maven-publish'
-
     java{
         withJavadocJar()
         withSourcesJar()
